premise-core/tests/snapshots/symbol_snapshots__01_entity_definitions.snap
---
source: premise-core/tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 1,
            "column": 0
          },
          "end": {
            "row": 1,
            "column": 35
          },
          "start_byte": 37,
          "end_byte": 72
        }
      },
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 2,
            "column": 0
          },
          "end": {
            "row": 2,
            "column": 34
          },
          "start_byte": 73,
          "end_byte": 107
        }
      },
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 3,
            "column": 0
          },
          "end": {
            "row": 3,
            "column": 24
          },
          "start_byte": 108,
          "end_byte": 132
        }
      },
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 4,
            "column": 0
          },
          "end": {
            "row": 4,
            "column": 41
          },
          "start_byte": 133,
          "end_byte": 174
        }
      },
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 7,
            "column": 0
          },
          "end": {
            "row": 7,
            "column": 75
          },
          "start_byte": 217,
          "end_byte": 292
        }
      },
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 8,
            "column": 0
          },
          "end": {
            "row": 8,
            "column": 82
          },
          "start_byte": 293,
          "end_byte": 375
        }
      },
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 9,
            "column": 0
          },
          "end": {
            "row": 9,
            "column": 72
          },
          "start_byte": 376,
          "end_byte": 448
        }
      }
    ],
    "adapters": [],
    "imports": [],
    "metadata": []
  },
  "diagnostics": []
}
