premise-core/tests/snapshots/symbol_snapshots__04_story_structure.snap
---
source: tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [],
    "adapters": [],
    "imports": [],
    "metadata": []
  },
  "diagnostics": []
}
