premise-core/tests/snapshots/symbol_snapshots__05_imports_and_metadata.snap
---
source: premise-core/tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [],
    "adapters": [
      {
        "kind": "AdapterPath",
        "name": "custom_adapter.yaml",
        "range": {
          "start": {
            "row": 2,
            "column": 0
          },
          "end": {
            "row": 4,
            "column": 29
          },
          "start_byte": 84,
          "end_byte": 156
        }
      }
    ],
    "imports": [
      {
        "kind": "Import",
        "name": null,
        "range": {
          "start": {
            "row": 1,
            "column": 0
          },
          "end": {
            "row": 1,
            "column": 30
          },
          "start_byte": 30,
          "end_byte": 60
        }
      }
    ],
    "metadata": [
      {
        "kind": "Metadata",
        "name": null,
        "range": {
          "start": {
            "row": 5,
            "column": 0
          },
          "end": {
            "row": 5,
            "column": 19
          },
          "start_byte": 157,
          "end_byte": 176
        }
      },
      {
        "kind": "Metadata",
        "name": null,
        "range": {
          "start": {
            "row": 8,
            "column": 0
          },
          "end": {
            "row": 8,
            "column": 25
          },
          "start_byte": 203,
          "end_byte": 228
        }
      }
    ]
  },
  "diagnostics": []
}
