premise-core/tests/snapshots/symbol_snapshots__07_full_example.snap
---
source: premise-core/tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [
      {
        "kind": "EntityConstruct",
        "name": null,
        "range": {
          "start": {
            "row": 0,
            "column": 0
          },
          "end": {
            "row": 0,
            "column": 28
          },
          "start_byte": 0,
          "end_byte": 28
        }
      },
      {
        "kind": "EntityBlock",
        "name": null,
        "range": {
          "start": {
            "row": 1,
            "column": 0
          },
          "end": {
            "row": 3,
            "column": 1
          },
          "start_byte": 29,
          "end_byte": 73
        }
      }
    ],
    "adapters": [],
    "imports": [],
    "metadata": []
  },
  "diagnostics": []
}
