premise-core/tests/snapshots/symbol_snapshots__08_eras_demo.snap
---
source: premise-core/tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [
      {
        "kind": "EntityBlock",
        "name": null,
        "range": {
          "start": {
            "row": 3,
            "column": 0
          },
          "end": {
            "row": 17,
            "column": 1
          },
          "start_byte": 89,
          "end_byte": 435
        }
      },
      {
        "kind": "EntityBlock",
        "name": null,
        "range": {
          "start": {
            "row": 19,
            "column": 0
          },
          "end": {
            "row": 26,
            "column": 1
          },
          "start_byte": 437,
          "end_byte": 606
        }
      },
      {
        "kind": "EntityBlock",
        "name": null,
        "range": {
          "start": {
            "row": 28,
            "column": 0
          },
          "end": {
            "row": 31,
            "column": 1
          },
          "start_byte": 608,
          "end_byte": 674
        }
      }
    ],
    "adapters": [],
    "imports": [],
    "metadata": []
  },
  "diagnostics": []
}
