premise-core/tests/snapshots/symbol_snapshots__09_adapters_and_block_scalars.snap
---
source: premise-core/tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [],
    "adapters": [
      {
        "kind": "AdapterPath",
        "name": "adapters/text_enhancement.yaml",
        "range": {
          "start": {
            "row": 3,
            "column": 0
          },
          "end": {
            "row": 3,
            "column": 59
          },
          "start_byte": 74,
          "end_byte": 133
        }
      },
      {
        "kind": "AdapterPath",
        "name": "adapters/post_processing.yaml",
        "range": {
          "start": {
            "row": 6,
            "column": 0
          },
          "end": {
            "row": 10,
            "column": 12
          },
          "start_byte": 172,
          "end_byte": 334
        }
      }
    ],
    "imports": [],
    "metadata": []
  },
  "diagnostics": []
}
