premise-core/tests/snapshots/symbol_snapshots__11_template_blocks.snap
---
source: premise-core/tests/symbol_snapshots.rs
expression: analysis
---
{
  "symbols": {
    "entities": [],
    "adapters": [],
    "imports": [],
    "metadata": []
  },
  "diagnostics": []
}
